# app/Http/Controllers/Api/TransactionsController.php
@@ -138,6 +138,66 @@ class TransactionsController extends Controller
             'message' => 'Fetch Success',
         ]);
     }
+    /**
+    * @OA\Get(
+    *     path="/transaction/withdrawal",
+    *      operationId="getWithdrawalTransactions",
+    *       tags={"TRANSACTION"},
+    *      summary="get paginated Deposit Transactions",
+    *      description="get paginated Deposit Transactions",
+    *      security={{"bearer_token":{}}},
+    *     @OA\Parameter(
+    *         name="perPage",
+    *         in="query",
+    *         description="number of plan per page",
+    *         @OA\Schema(type="integer")
+    *     ),
+    *     @OA\Parameter(
+    *         name="page",
+    *         in="query",
+    *         description="page number",
+    *         @OA\Schema(type="integer")
+    *     ),
+    *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *          @OA\JsonContent()
+     *       ),
+     *      @OA\Response(
+     *          response=201,
+     *          description="Successful Insert operation",
+     *          @OA\JsonContent()
+     *       ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     *      ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      ),
+     *      @OA\Response(
+     *          response=422,
+     *          description="Unprocessable Entity",
+     *
+     *          )
+    * )
+    */
+    public function getWithdrawalTransactions(Request $request){
+        $perPage = $request->query('perPage');
+        $page = $request->query('page');
+
+        $deposits = Transaction::query()
+        ->where('transaction_type', TransactionEnums::WITHDRAWAL)
+        ->with('user')
+        ->latest()
+        ->paginate($perPage, ['*'], 'page');
+
+        return TransactionsResource::collection($deposits)->additional([
+            'success' => true,
+            'message' => 'Fetch Success',
+        ]);
+    }
 
     /**
      *
