# routes/api.php
@@ -22,6 +22,7 @@ Route::group(['middleware' => 'auth:sanctum','prefix'=>'transaction'], function 
 
     Route::get('/', [TransactionsController::class, 'getTransactions']);
     Route::get('deposit', [TransactionsController::class, 'getDepositTransactions']);
+    Route::get('withdrawal', [TransactionsController::class, 'getWithdrawalTransactions']);
     Route::post('deposit', [TransactionsController::class, 'depositTransaction']);
 });
 
